--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["**"] }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "index.js"
-    }
-  ]
-}
+    "version": 2,
+    "builds": [
+      { "src": "index.js", "use": "@vercel/node" },
+      { "src": "dist/**/*", "use": "@vercel/static" }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/dist/index.html" }
+    ]
+  }
+  
