--- a/vercel.json
+++ b/vercel.json
@@ -9,3 +9,27 @@
     ]
   }
   
+
+  {
+    "version": 2,
+    "builds": [
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
+        },
+        {
+            "src": "dist/**/*",
+            "use": "@vercel/static"
+        }
+    ],
+    "routes":[
+        {
+            "src": "/",
+            "dest": "dist/index.html"
+        },
+        {
+            "src": "/(.+)",
+            "dest": "dist/$1"
+        }
+    ]
+}
